--- a/force-app/main/default/classes/MyIterableTest.cls
+++ b/force-app/main/default/classes/MyIterableTest.cls
@@ -2,6 +2,7 @@
 public class MyIterableTest {
     @IsTest
     static void testIterableForLoop() {
+        //Test 3
         List<String> strings = new List<String>{'Hello', 'World'};        
         MyIterable myIterableInstance = new MyIterable(strings);
         System.debug('myIterableInstance: ' + myIterableInstance);
